2010-02-16  MORITA Hajime  <morrita@gmail.com>

Reviewed by Nikolas Zimmermann.

        REGRESSION: SVG text disappaears after double click
        https://bugs.webkit.org/show_bug.cgi?id=34880

        * platform/mac/svg/text/selection-doubleclick-expected.checksum: Added.
        * platform/mac/svg/text/selection-doubleclick-expected.png: Added.
        * platform/mac/svg/text/selection-doubleclick-expected.txt: Added.
        * platform/mac/svg/text/selection-tripleclick-expected.checksum: Added.
        * platform/mac/svg/text/selection-tripleclick-expected.png: Added.
        * platform/mac/svg/text/selection-tripleclick-expected.txt: Added.
        * svg/text/selection-doubleclick.svg: Added.
        * svg/text/selection-tripleclick.svg: Added.
2010-02-16  MORITA Hajime  <morrita@gmail.com>

        Reviewed by Nikolas Zimmermann.

        REGRESSION: SVG text disappaears after double click
        https://bugs.webkit.org/show_bug.cgi?id=34880

        Tests: svg/text/selection-doubleclick.svg
               svg/text/selection-tripleclick.svg

        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBoxPaintWalker::mayHaveSelection):
        Use InlineTextBox::selectionStartEnd() instead of
        RenderObject::selectionStartEnd() because latter may span multiple
        comparing startPos and endPos is irrelevant in some cases.
        former selectionStartEnd() is for single line and comparing
        startPos and endPos will make sense.

git-svn-id: svn://svn.chromium.org/blink/trunk@54858 bbb929c8-8fbe-4397-9dbb-9b2b20218538