third_party/WebKit/WebCore/rendering/SVGRootInlineBox.cpp
@@ -364,10 +364,10 @@ struct SVGRootInlineBoxPaintWalker {
         ASSERT(!m_chunkStarted);
     }
 
-    bool mayHaveSelection(InlineBox* box) const
+    bool mayHaveSelection(SVGInlineTextBox* box) const
     {
         int selectionStart = 0, selectionEnd = 0;
-        box->renderer()->selectionStartEnd(selectionStart, selectionEnd);
+        box->selectionStartEnd(selectionStart, selectionEnd);
         return selectionStart < selectionEnd;
     }
 
@@ -437,13 +437,13 @@ struct SVGRootInlineBoxPaintWalker {
         m_paintInfo.rect = m_savedInfo.rect;
     }
 
-    bool setupBackground(InlineBox* /*box*/)
+    bool setupBackground(SVGInlineTextBox* /*box*/)
     {
         m_textPaintInfo.subphase = SVGTextPaintSubphaseBackground;
         return true;
     }
 
-    bool setupFill(InlineBox* box)
+    bool setupFill(SVGInlineTextBox* box)
     {
         InlineFlowBox* flowBox = box->parent();
 
@@ -465,7 +465,7 @@ struct SVGRootInlineBoxPaintWalker {
         return false;
     }
 
-    bool setupFillSelection(InlineBox* box)
+    bool setupFillSelection(SVGInlineTextBox* box)
     {
         InlineFlowBox* flowBox = box->parent();
 
@@ -493,7 +493,7 @@ struct SVGRootInlineBoxPaintWalker {
         return false;
     }
 
-    bool setupStroke(InlineBox* box)
+    bool setupStroke(SVGInlineTextBox* box)
     {
         InlineFlowBox* flowBox = box->parent();
 
@@ -517,7 +517,7 @@ struct SVGRootInlineBoxPaintWalker {
         return false;
     }
 
-    bool setupStrokeSelection(InlineBox* box)
+    bool setupStrokeSelection(SVGInlineTextBox* box)
     {
         InlineFlowBox* flowBox = box->parent();
 
@@ -546,7 +546,7 @@ struct SVGRootInlineBoxPaintWalker {
         return false;
     }
 
-    bool setupForeground(InlineBox* /*box*/)
+    bool setupForeground(SVGInlineTextBox* /*box*/)
     {
         teardownFillPaintServer();
         teardownStrokePaintServer();
